--- a/css/newspopper.css
+++ b/css/newspopper.css
@@ -16,3 +16,10 @@
   border: 1px gray solid;
   border-radius: 15px;
 }
+
+
+#dropZone {
+  height: 60px;
+  width: 600px;
+  background-color: dimgrey;
+}
